--- a/PollSystem/src/main/resources/application.properties
+++ b/PollSystem/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=PollSystem
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:pollDB
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
